syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "ServiceTradeGrpc";

service TradeGrpc {  
  // 1:一元调用:判断程序/网络是否启动
  rpc TradeActive (google.protobuf.Empty) returns (google.protobuf.Empty);
  // 2:一元调用:分配撮合交易对
  rpc TradeLoad (TradeLoadReq) returns (TradeLoadRes);
  // 3:一元调用:开启交易服务
  rpc TradeStart(TradeStartReq) returns(TradeStartRes);
  // 4:一元调用:停止交易服务
  rpc TradeStop(TradeStopReq) returns(TradeStopRes);
  // 5:一元调用:交易对配置更改
  rpc TradeChange(TradeChangeReq) returns(TradeChangeRes);
  // 6:一元调用:挂单
  rpc TradePlaceOrder(TradePlaceOrderReq) returns(TradePlaceOrderRes);  
  // 7:一元调用:取消挂单
  rpc TradeCancelOrder(TradeCancelOrderReq) returns(TradeCancelOrderRes);  
}

message TradeLoadReq{
  repeated int64 market_id=1;
}
message TradeLoadRes{
  bool success=1; 
}

message TradeStartReq{
  repeated int64 market_id=1; 
}
message TradeStartRes{
  bool success=1; 
}

message TradeStopReq{
  repeated int64 market_id=1; 
}
message TradeStopRes{
  bool success=1; 
}

message TradeChangeReq{
  repeated int64 market_id=1; 
}
message TradeChangeRes{
  bool success=1; 
}

message TradePlaceOrderReq{
  string symbol=1; 
  int64 uid=2;
  string user_name=3;
  string ip=4;
  string orders=5;
}
message TradePlaceOrderRes{
  string json=1; 
}

message TradeCancelOrderReq{
  string symbol=1; 
  int64 uid=2;
  int32 type=3;
  string orders=4;
}
message TradeCancelOrderRes{
  string json=1; 
}